--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -6,3 +6,9 @@
 .no-me {
     background-color: yellow;
 }
+
+.me,
+.no-me {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
